#40 переход на openjdk13